Add Forecasted CPU,Memory. Update docs
