# docs/swagger.json
@@ -41,7 +41,7 @@
                     "200": {
                         "description": "Ok",
                         "schema": {
-                            "$ref": "#/definitions/models_icos.Infrastructure"
+                            "$ref": "#/definitions/models.Infrastructure"
                         }
                     },
                     "400": {
@@ -55,7 +55,7 @@
         }
     },
     "definitions": {
-        "models_icos.API": {
+        "models.API": {
             "type": "object",
             "properties": {
                 "authentication": {
@@ -75,7 +75,7 @@
                 }
             }
         },
-        "models_icos.AvailableStorage": {
+        "models.AvailableStorage": {
             "type": "object",
             "properties": {
                 "free": {
@@ -86,30 +86,33 @@
                 }
             }
         },
-        "models_icos.Cluster": {
+        "models.Cluster": {
             "type": "object",
             "properties": {
                 "API": {
-                    "$ref": "#/definitions/models_icos.API"
+                    "$ref": "#/definitions/models.API"
                 },
                 "any": {},
+                "clusterLink": {
+                    "type": "boolean"
+                },
+                "engine": {
+                    "type": "string"
+                },
+                "icosAgentID": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
                 "node": {
                     "type": "object",
                     "additionalProperties": {
-                        "$ref": "#/definitions/models_icos.Node"
-                    }
-                },
-                "pod": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "$ref": "#/definitions/models_icos.Pod"
+                        "$ref": "#/definitions/models.Node"
                     }
                 },
                 "serviceLevelAgreement": {
-                    "$ref": "#/definitions/models_icos.ServiceLevelAgreement"
+                    "$ref": "#/definitions/models.ServiceLevelAgreement"
                 },
                 "type": {
                     "type": "string"
@@ -119,7 +122,7 @@
                 }
             }
         },
-        "models_icos.Container": {
+        "models.Container": {
             "type": "object",
             "properties": {
                 "containerMemory": {
@@ -142,28 +145,28 @@
                 }
             }
         },
-        "models_icos.Controller": {
+        "models.Controller": {
             "type": "object",
             "properties": {
                 "API": {
-                    "$ref": "#/definitions/models_icos.API"
+                    "$ref": "#/definitions/models.API"
                 },
                 "any": {},
                 "location": {
-                    "$ref": "#/definitions/models_icos.Location"
+                    "$ref": "#/definitions/models.Location"
                 },
                 "name": {
                     "type": "string"
                 },
                 "serviceLevelAgreement": {
-                    "$ref": "#/definitions/models_icos.ServiceLevelAgreement"
+                    "$ref": "#/definitions/models.ServiceLevelAgreement"
                 },
                 "type": {
                     "type": "string"
                 }
             }
         },
-        "models_icos.Device": {
+        "models.Device": {
             "type": "object",
             "properties": {
                 "name": {
@@ -180,19 +183,22 @@
                 }
             }
         },
-        "models_icos.DynamicMetrics": {
+        "models.DynamicMetrics": {
             "type": "object",
             "properties": {
                 "availableStorage": {
-                    "$ref": "#/definitions/models_icos.AvailableStorage"
+                    "$ref": "#/definitions/models.AvailableStorage"
                 },
                 "cpuEnergyConsumption": {
                     "type": "number"
                 },
                 "cpuFrequency": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "cpuTemperature": {
+                    "type": "number"
+                },
+                "cpuUsagePercent": {
                     "type": "number"
                 },
                 "freeRAM": {
@@ -207,32 +213,49 @@
                 "gpuTemperature": {
                     "type": "number"
                 },
+                "memoryUsagePercent": {
+                    "type": "number"
+                },
                 "upTime": {
+                    "type": "number"
+                },
+                "usedRAM": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.ForecastedMetrics": {
+            "type": "object",
+            "properties": {
+                "cpuUtilizationPrediction": {
+                    "type": "number"
+                },
+                "memoryUtilizationPrediction": {
                     "type": "number"
                 }
             }
         },
-        "models_icos.Infrastructure": {
+        "models.Infrastructure": {
             "type": "object",
             "properties": {
                 "cluster": {
                     "type": "object",
                     "additionalProperties": {
-                        "$ref": "#/definitions/models_icos.Cluster"
+                        "$ref": "#/definitions/models.Cluster"
                     }
                 },
                 "controller": {
                     "type": "object",
                     "additionalProperties": {
-                        "$ref": "#/definitions/models_icos.Controller"
+                        "$ref": "#/definitions/models.Controller"
                     }
                 },
                 "timestamp": {
-                    "$ref": "#/definitions/models_icos.Timestamp"
+                    "$ref": "#/definitions/models.Timestamp"
                 }
             }
         },
-        "models_icos.Interface": {
+        "models.Interface": {
             "type": "object",
             "properties": {
                 "engressUssage": {
@@ -261,7 +284,7 @@
                 }
             }
         },
-        "models_icos.Location": {
+        "models.Location": {
             "type": "object",
             "properties": {
                 "city": {
@@ -284,7 +307,7 @@
                 }
             }
         },
-        "models_icos.Node": {
+        "models.Node": {
             "type": "object",
             "properties": {
                 "ScaScore": {
@@ -293,14 +316,26 @@
                 "devices": {
                     "type": "object",
                     "additionalProperties": {
-                        "$ref": "#/definitions/models_icos.Device"
+                        "$ref": "#/definitions/models.Device"
                     }
                 },
                 "dynamicMetrics": {
-                    "$ref": "#/definitions/models_icos.DynamicMetrics"
+                    "$ref": "#/definitions/models.DynamicMetrics"
+                },
+                "engine": {
+                    "type": "string"
+                },
+                "forecastedMetrics": {
+                    "$ref": "#/definitions/models.ForecastedMetrics"
+                },
+                "labels": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 },
                 "location": {
-                    "$ref": "#/definitions/models_icos.Location"
+                    "$ref": "#/definitions/models.Location"
                 },
                 "name": {
                     "type": "string"
@@ -308,11 +343,17 @@
                 "networkInterfaces": {
                     "type": "object",
                     "additionalProperties": {
-                        "$ref": "#/definitions/models_icos.Interface"
+                        "$ref": "#/definitions/models.Interface"
+                    }
+                },
+                "pod": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/models.Pod"
                     }
                 },
                 "staticMetrics": {
-                    "$ref": "#/definitions/models_icos.StaticMetrics"
+                    "$ref": "#/definitions/models.StaticMetrics"
                 },
                 "type": {
                     "type": "string"
@@ -328,13 +369,13 @@
                 }
             }
         },
-        "models_icos.Pod": {
+        "models.Pod": {
             "type": "object",
             "properties": {
                 "container": {
                     "type": "object",
                     "additionalProperties": {
-                        "$ref": "#/definitions/models_icos.Container"
+                        "$ref": "#/definitions/models.Container"
                     }
                 },
                 "ip": {
@@ -351,10 +392,16 @@
                 },
                 "status": {
                     "type": "string"
+                },
+                "workload": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/models.Workload"
+                    }
                 }
             }
         },
-        "models_icos.ServiceLevelAgreement": {
+        "models.ServiceLevelAgreement": {
             "type": "object",
             "properties": {
                 "name": {
@@ -362,7 +409,7 @@
                 }
             }
         },
-        "models_icos.StaticMetrics": {
+        "models.StaticMetrics": {
             "type": "object",
             "properties": {
                 "RAMMemory": {
@@ -389,12 +436,12 @@
                 "storage": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models_icos.Storage"
+                        "$ref": "#/definitions/models.Storage"
                     }
                 }
             }
         },
-        "models_icos.Storage": {
+        "models.Storage": {
             "type": "object",
             "properties": {
                 "capacity": {
@@ -408,7 +455,7 @@
                 }
             }
         },
-        "models_icos.Timestamp": {
+        "models.Timestamp": {
             "type": "object",
             "properties": {
                 "oldestTimestamp": {
@@ -416,6 +463,20 @@
                 },
                 "timeSinceOldest": {
                     "type": "number"
+                }
+            }
+        },
+        "models.Workload": {
+            "type": "object",
+            "properties": {
+                "icos_app_component": {
+                    "type": "string"
+                },
+                "icos_app_instance": {
+                    "type": "string"
+                },
+                "icos_app_name": {
+                    "type": "string"
                 }
             }
         }
